--- a/TODO
+++ b/TODO
@@ -10,7 +10,11 @@ TODO
    - Moznosti spustit priklad.
    - Odstranit mezery na zacatku radku prikladu. Projit radek po radku a zjistit
      minimalni pocet mezer a ten odstranit.
-2.
+2. Proc nefunguje pod_example -r -s SYNOPSIS Text::Scraper ?
+3. Proc nefunguje pod_example -p -s EXAMPLES Text::Stripper ?
+4. Algoritmus odstraneni opakujicich se mezer presunout do nejakeho Text::*
+   modulu.
+5.
 
 Applied
 =======
