--- a/TODO
+++ b/TODO
@@ -15,7 +15,7 @@ TODO
 4. Algoritmus odstraneni opakujicich se mezer presunout do nejakeho Text::*
    modulu.
    Text::Outdent - otestovat muj algoritmus oproti tomuto.
-5. Priklady spoustet forknute? Jinak zasahuji do behu programu.
+5. Priklady spoustet pomoci system? Jinak zasahuji do behu programu.
 6.
 
 Applied
