--- a/TODO
+++ b/TODO
@@ -16,7 +16,8 @@ TODO
    modulu.
    Text::Outdent - otestovat muj algoritmus oproti tomuto.
 5. Priklady spoustet pomoci system? Jinak zasahuji do behu programu.
-6.
+6. Jak odstranit redefine pro test s err?
+7.
 
 Applied
 =======
