--- a/TODO
+++ b/TODO
@@ -14,14 +14,15 @@ TODO
 3. Proc nefunguje pod_example -p -s EXAMPLES Text::Stripper ?
 5. Priklady spoustet pomoci system? Jinak zasahuji do behu programu.
 6. Jak odstranit redefine pro test s err?
-7. Presunout vlastni kod do Pod::Example.
 8.
 
 Applied
 =======
-
 4. Algoritmus odstraneni opakujicich se mezer presunout do nejakeho Text::*
    modulu.
    Text::Outdent - otestovat muj algoritmus oproti tomuto.
 Přesunuto do Pod::Example.
 NONE [20110710] skim
+
+7. Presunout vlastni kod do Pod::Example.
+OK [20110710] skim
