--- a/TODO
+++ b/TODO
@@ -1,15 +1,5 @@
 TODO
 ====
-1. Modul pro aplikaci, ktera:
-   - Umoznuje zadat
-     - Soubor perl modulu
-     - Nebo perl modul
-     - Nazev sekce, implicitne EXAMPLE\d?
-   - Pokud je vice sekci, nabidne vyber sekce
-   - Moznost vypsat priklad
-   - Moznosti spustit priklad.
-   - Odstranit mezery na zacatku radku prikladu. Projit radek po radku a zjistit
-     minimalni pocet mezer a ten odstranit.
 2. Proc nefunguje pod_example -r -s SYNOPSIS Text::Scraper ?
 3. Proc nefunguje pod_example -p -s EXAMPLES Text::Stripper ?
 5. Priklady spoustet pomoci system? Jinak zasahuji do behu programu.
@@ -27,3 +17,16 @@ NONE [20110710] skim
 
 7. Presunout vlastni kod do Pod::Example.
 OK [20110710] skim
+
+1. Modul pro aplikaci, ktera:
+   - Umoznuje zadat
+     - Soubor perl modulu
+     - Nebo perl modul
+     - Nazev sekce, implicitne EXAMPLE\d?
+   - Pokud je vice sekci, nabidne vyber sekce
+   - Moznost vypsat priklad
+   - Moznosti spustit priklad.
+   - Odstranit mezery na zacatku radku prikladu. Projit radek po radku a zjistit
+     minimalni pocet mezer a ten odstranit.
+First version.
+OK [20110715] skim
