--- a/TODO
+++ b/TODO
@@ -4,7 +4,8 @@ TODO
 5. Priklady spoustet pomoci system? Jinak zasahuji do behu programu.
 6. Jak odstranit redefine pro test s err?
 8. Implementovat 'interactive' flag?
-9.
+9. Cover testsing.
+10.
 
 Applied
 =======
