Add TODO. Fix other TODO text.

--- a/TODO
+++ b/TODO
@@ -4,8 +4,9 @@ TODO
 5. Priklady spoustet pomoci system? Jinak zasahuji do behu programu.
 6. Jak odstranit redefine pro test s err?
 8. Implementovat 'interactive' flag?
-9. Cover testsing.
-10.
+9. Cover testing.
+10. pod_example man
+11.
 
 Applied
 =======
