--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 0.02
 - Add doc for pod_example script.
 - Fix git repository.
+- Fix help indent in pod_example script.
 - Remove "(3pm)" from pod doc.
 - Rewrite 03-pod.t to better version for Perl 5.6.
 
