--- a/TODO
+++ b/TODO
@@ -5,7 +5,8 @@ TODO
 6. Jak odstranit redefine pro test s err?
 8. Implementovat 'interactive' flag?
 9. Cover testing.
-11.
+11. Implementovat zobrazeni seznamu example sekci.
+12.
 
 Applied
 =======
