--- a/README
+++ b/README
@@ -15,6 +15,11 @@ METHODS
                      Debug flag. It means print debug messages.
                      Default value is 1.
 
+            *       "enumerate"
+
+                     Enumerate lines in print output.
+                     Default value is 0.
+
             *       "print"
 
                      Print flag. It means print of example.
@@ -47,6 +52,7 @@ EXAMPLE
 
      # Run.
      App::Pod::Example->new(
+             'enumerate' => 1,
              'print' => 1,
              'run' => 1,
      )->run('Pod::Example');
