--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 0.05
+- Fix help (add -e option to possible arguments).
+- Improve help to 80 chars per line.
 
 0.04 (November 12, 2012)
 - Fix rigth word to right.
