--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 0.05
 - Add Test::NoWarnings to tests.
+- Add Test::Warn for one test.
 - Fix help (add -e option to possible arguments).
 - Improve help to 80 chars per line.
 
