--- a/TODO
+++ b/TODO
@@ -10,7 +10,8 @@ TODO
 13. Opravit problematicky test.
     http://matrix.cpantesters.org/?dist=App-Pod-Example+0.05
 14. Stash pop
-15.
+15. Vstupni argumenty pro priklady?
+16.
 
 Applied
 =======
