--- a/TODO
+++ b/TODO
@@ -11,7 +11,8 @@ TODO
     http://matrix.cpantesters.org/?dist=App-Pod-Example+0.05
 14. Stash pop
 15. Vstupni argumenty pro priklady?
-16.
+16. Prejmenovat pod_example na pod-example.
+17.
 
 Applied
 =======
