--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.08
  - Fix dependency for Test::Output. Test::Output qw(1.01) is bad.
+ - Move back problematic test.
 
 0.07 2013-09-29
  - Add LICENSE.
