--- a/TODO
+++ b/TODO
@@ -3,13 +3,14 @@ TODO
 2. Proc nefunguje pod_example -r -s SYNOPSIS Text::Scraper ?
 5. Priklady spoustet pomoci system? Jinak zasahuji do behu programu.
 6. Jak odstranit redefine pro test s err?
+Tohle ted snad nebude?
 8. Implementovat 'interactive' flag?
 11. Implementovat zobrazeni seznamu example sekci.
 12. Implementovat debug mod, kde budu moci videt chyby pri spatnem eval toho
     kodu.
 13. Opravit problematicky test.
     http://matrix.cpantesters.org/?dist=App-Pod-Example+0.05
-14. Stash pop
+Tohle je snad opraveno?
 15. Vstupni argumenty pro priklady?
 16. Prejmenovat pod_example na pod-example.
 17.
@@ -46,3 +47,6 @@ OK [20110730] skim
 
 9. Cover testing.
 OK [20121112] skim
+
+14. Stash pop
+OK [20131106] skim
