--- a/README
+++ b/README
@@ -32,10 +32,13 @@ METHODS
 
     "run($file_or_module, $section, $number_of_example, $args_ar)"
              Run method.
-             $file_or_module - File with pod doc or perl module.
-             $section - Pod section with example. Default value is 'EXAMPLE'.
-             $number_of_example - Number of example. Default value is 1.
-             $args_ar - Reference to array with arguments for 'run' mode.
+             $file_or_module    - File with pod doc or perl module.
+             $section           - Pod section with example. Default value is 'EXAMPLE'.
+             $number_of_example - Number of example. If exists 'EXAMPLE1' and 'EXAMPLE2'
+                                  sections, then this number can be '1' or '2'.
+                                  Default value is nothing.
+             $args_ar           - Reference to array with arguments for 'run' mode.
+             Returns undef.
 
 ERRORS
      new():
