--- a/README
+++ b/README
@@ -77,7 +77,8 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    BSD license.
+     © 2011-2015 Michal Špaček
+     BSD 2-Clause License
 
 VERSION
     0.15
