--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.15
  - Fix script name in doc.
+ - Remove trailing whitespace.
  - Update Module::Install to 1.16 version.
  - Update LICENSE AND COPYRIGHT section in doc.
  - Update copyright years.
