Rewrite README file to doc from script.

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
  - Fix script name in doc.
  - Improve documentation of script.
  - Remove trailing whitespace.
+ - Rewrite README file to doc from script.
  - Update Module::Install to 1.16 version.
  - Update LICENSE AND COPYRIGHT section in doc.
  - Update copyright years.
