Sort modules in test.

--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
  - Remove trailing whitespace.
  - Rewrite README file to doc from script.
  - Rewrite code from script to library.
+ - Sort modules in test.
  - Update Module::Install to 1.16 version.
  - Update LICENSE AND COPYRIGHT section in doc.
  - Update copyright years.
