--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.16
  - Fix App::Pod::Example NAME section in doc.
+ - Remove .travis.yml from distribution.
 
 0.15 2015-09-28T03:01:27+02:00
  - Fix script name in doc.
