Improve object private parameter name

--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
-0.18
+0.18 
+ - Improve object private parameter name.
 
 0.17 2020-02-02T21:45:26+01:00
  - Add missing dependency for Getopt::Std.
