--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.18 
  - Improve object private parameter name.
+ - Update POD documentation to my standard.
 
 0.17 2020-02-02T21:45:26+01:00
  - Add missing dependency for Getopt::Std.
