Update copyright years

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.19
  - Update LICENSE AND COPYRIGHT secion in doc.
+ - Update copyright years.
 
 0.18 2020-02-28T14:09:25+01:00
  - Improve object private parameter name.
